# 361-koopman-operator-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
rust/: Cargo.toml
rust/examples/: backtest.rs  dmd_analysis.rs  fetch_data.rs  regime_detection.rs  trading_signals.rs
rust/src/: lib.rs  main.rs
rust/src/api/: bybit.rs  mod.rs
rust/src/features/: lifting.rs  mod.rs  observables.rs
rust/src/koopman/: dmd.rs  edmd.rs  mod.rs  prediction.rs
rust/src/trading/: backtest.rs  metrics.rs  mod.rs  signals.rs
