[package]
name = "koopman_trading"
version = "0.1.0"
edition = "2021"
description = "Koopman Operator methods for cryptocurrency trading using Bybit data"
authors = ["ML Trading Examples"]
license = "MIT"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"

# Complex numbers
num-complex = "0.4"
num-traits = "0.2"

# Random number generation
rand = "0.8"

# Statistical functions
statrs = "0.16"

# CSV handling
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "koopman_trading"
path = "src/main.rs"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "dmd_analysis"
path = "examples/dmd_analysis.rs"

[[example]]
name = "trading_signals"
path = "examples/trading_signals.rs"

[[example]]
name = "regime_detection"
path = "examples/regime_detection.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"
